--- a/src/index.less
+++ b/src/index.less
@@ -4,7 +4,4 @@
 @import "../node_modules/bootswatch/slate/variables.less";
 @icon-font-path: 'node_modules/bootstrap/fonts/';
 
-@import "./cart/index";
-@import "./cart-summary/index";
-@import "./products/index";
-@import "./products-catalog/index";
+@import "./videos/index";
