--- a/src/videos/components/index.less
+++ b/src/videos/components/index.less
@@ -2,12 +2,14 @@
     border: 1px solid black;
     border-radius: 3px;
     margin-bottom: 15px;
-    /*h3{
-    }
     img{
         display: inline-block;
+        width: 30%;
+        vertical-align: top;
     }
     .info-container{
         display: inline-block;
-    }*/
+        width: 65%;
+        margin-left: 10px;
+    }
 }
