Added styles to ipp buttons && styles to elements

--- a/src/index.less
+++ b/src/index.less
@@ -5,3 +5,8 @@
 @icon-font-path: 'node_modules/bootstrap/fonts/';
 
 @import "./videos/index";
+
+body{
+    background-color: white;
+    color: black;
+}
