--- a/src/videos/components/index.less
+++ b/src/videos/components/index.less
@@ -1,5 +1,5 @@
 .video-item{
-    border: 1px solid black;
+    border: 1px solid #a2a2a2;
     border-radius: 3px;
     margin-bottom: 15px;
     img{
@@ -11,5 +11,20 @@
         display: inline-block;
         width: 65%;
         margin-left: 10px;
+        .video-name{
+            font-size: 20px;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+        .info-line{
+            margin-top: 5px;
+        }
+        .stats-container{
+            margin-top: 10px;
+            div{
+                width: 32%;
+                display: inline-block;
+            }
+        }
     }
 }
