--- a/src/videos/index.less
+++ b/src/videos/index.less
@@ -1,16 +1,2 @@
 @import "./components/index";
-
-.form{
-    .filter-title{
-        display: block;
-    }
-    form {
-        input {
-            border-radius: 3px;
-            border: none;
-        }
-        button {
-            display: block;
-        }
-    }
-}
+@import "./routes/index";
