--- a/src/videos/routes/index.less
+++ b/src/videos/routes/index.less
@@ -4,11 +4,15 @@
             min-width: 100px;
             display: inline-block;
             margin-right: 30px;
-            border-radius: 5px;
+            border-radius: 3px;
             border: 1px solid #a2a2a2;
             background-color: white;
             &:hover{
                 background-color: #4486F9;
+            }
+            &.active{
+                color: #4486F9;
+                border: 1px solid #4486F9;
             }
 
         }
@@ -24,6 +28,28 @@
             border: 1px solid #a2a2a2;
             border-radius: 5px;
             padding: 0 5px;
+        }
+    }
+}
+
+.pagination-container{
+    max-width: 300px;
+    margin: 0 auto 50px;
+    button{
+        min-width: 100px;
+        display: inline-block;
+        border-radius: 3px;
+        border: 1px solid #a2a2a2;
+        background-color: white;
+        &:hover{
+            background-color: #4486F9;
+            &:disabled{
+                background-color: transparent;
+            }
+        }
+        &:disabled{
+            cursor: not-allowed;
+            opacity: 0.6;
         }
     }
 }
